# raidesk-server

./: .dockerignore  COMPLETE_FEATURES_SUMMARY.md  Dockerfile  FRONTEND_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  MIGRATION_GUIDE.md  QUICKSTART.md  README.md  SERVER_FEATURES.md  STREAMING_GUIDE.md  STREAMING_QUICK_START.md  docker-compose.yml  env copy.example  pyproject.toml  raidesk.db  requirements.txt  run.sh  setup.sh  test_api.py
app/: __init__.py  config.py  dependencies.py  exceptions.py  main.py  models.py  prompts.py
app/agents/: __init__.py  classifier.py  planner.py  purpose.py  refiner.py
app/middleware/: __init__.py  error_handler.py  logging.py  rate_limiter.py
app/routers/: __init__.py  classify.py  plans.py  purpose.py  refine.py  sessions.py  standards.py  stream.py
app/storage/: __init__.py  base.py  plan_repository.py  redis_adapter.py  session_manager.py  sqlite_adapter.py
