[project]
name = "raidesk-server"
version = "1.0.0"
description = "AI-powered medical device regulatory assistant backend"
requires-python = ">=3.11"
license = {text = "ISC"}

[project.urls]
Repository = "https://github.com/Digital-Alchemist-Labs/raidesk-server"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

